--- a/modules/home/vesktop/settings/settings.json
+++ b/modules/home/vesktop/settings/settings.json
@@ -3,8 +3,7 @@
     "autoUpdate": false,
     "autoUpdateNotification": true,
     "useQuickCss": true,
-    "themeLinks": [
-    ],
+    "themeLinks": [],
     "enabledThemes": [
       "Stylix.theme.css"
     ],
@@ -25,26 +24,8 @@
         "ContextMenuAPI": {
             "enabled": true
         },
-        "MemberListDecoratorsAPI": {
-            "enabled": false
-        },
-        "MessageAccessoriesAPI": {
-            "enabled": false
-        },
-        "MessageDecorationsAPI": {
-            "enabled": false
-        },
-        "MessageEventsAPI": {
-            "enabled": false
-        },
-        "MessagePopoverAPI": {
-            "enabled": false
-        },
         "NoticesAPI": {
             "enabled": true
-        },
-        "ServerListAPI": {
-            "enabled": false
         },
         "NoTrack": {
             "enabled": true
@@ -59,374 +40,20 @@
         "AlwaysAnimate": {
             "enabled": true
         },
-        "AlwaysTrust": {
-            "enabled": false
-        },
-        "AnonymiseFileNames": {
-            "enabled": false
-        },
         "WebRichPresence (arRPC)": {
             "enabled": true
-        },
-        "BANger": {
-            "enabled": false
-        },
-        "BetterFolders": {
-            "enabled": false
-        },
-        "BetterGifAltText": {
-            "enabled": false
-        },
-        "BetterNotesBox": {
-            "enabled": false
-        },
-        "BetterRoleDot": {
-            "enabled": false
-        },
-        "BetterUploadButton": {
-            "enabled": false
-        },
-        "BiggerStreamPreview": {
-            "enabled": false
-        },
-        "BlurNSFW": {
-            "enabled": false
-        },
-        "CallTimer": {
-            "enabled": false
-        },
-        "ClearURLs": {
-            "enabled": false
-        },
-        "ClientTheme": {
-            "enabled": false
-        },
-        "ColorSighted": {
-            "enabled": false
-        },
-        "ConsoleShortcuts": {
-            "enabled": false
-        },
-        "CopyUserURLs": {
-            "enabled": false
         },
         "CrashHandler": {
             "enabled": true
         },
-        "CustomRPC": {
-            "enabled": false
-        },
-        "Dearrow": {
-            "enabled": false
-        },
-        "DisableDMCallIdle": {
-            "enabled": false
-        },
-        "EmoteCloner": {
-            "enabled": false
-        },
         "Experiments": {
             "enabled": true
-        },
-        "F8Break": {
-            "enabled": false
-        },
-        "FakeNitro": {
-            "enabled": false
-        },
-        "FakeProfileThemes": {
-            "enabled": false
-        },
-        "FavoriteEmojiFirst": {
-            "enabled": false
-        },
-        "FavoriteGifSearch": {
-            "enabled": false
-        },
-        "FixImagesQuality": {
-            "enabled": false
-        },
-        "FixSpotifyEmbeds": {
-            "enabled": false
-        },
-        "ForceOwnerCrown": {
-            "enabled": false
-        },
-        "FriendInvites": {
-            "enabled": false
-        },
-        "GameActivityToggle": {
-            "enabled": false
-        },
-        "GifPaste": {
-            "enabled": false
-        },
-        "GreetStickerPicker": {
-            "enabled": false
-        },
-        "HideAttachments": {
-            "enabled": false
-        },
-        "iLoveSpam": {
-            "enabled": false
-        },
-        "IgnoreActivities": {
-            "enabled": false
         },
         "ImageZoom": {
             "enabled": true
         },
-        "InvisibleChat": {
-            "enabled": false
-        },
-        "KeepCurrentChannel": {
-            "enabled": false
-        },
-        "LastFMRichPresence": {
-            "enabled": false
-        },
-        "LoadingQuotes": {
-            "enabled": false
-        },
-        "MemberCount": {
-            "enabled": false
-        },
-        "MessageClickActions": {
-            "enabled": false
-        },
-        "MessageLinkEmbeds": {
-            "enabled": false
-        },
-        "MessageLogger": {
-            "enabled": false
-        },
-        "MessageTags": {
-            "enabled": false
-        },
-        "MoreCommands": {
-            "enabled": false
-        },
-        "MoreKaomoji": {
-            "enabled": false
-        },
-        "MoreUserTags": {
-            "enabled": false
-        },
-        "Moyai": {
-            "enabled": false
-        },
-        "MuteNewGuild": {
-            "enabled": false
-        },
-        "MutualGroupDMs": {
-            "enabled": false
-        },
-        "NoBlockedMessages": {
-            "enabled": false
-        },
-        "NoDevtoolsWarning": {
-            "enabled": false
-        },
-        "NoF1": {
-            "enabled": false
-        },
-        "NoMosaic": {
-            "enabled": false
-        },
-        "NoPendingCount": {
-            "enabled": false
-        },
-        "NoProfileThemes": {
-            "enabled": false
-        },
-        "NoReplyMention": {
-            "enabled": false
-        },
-        "NoScreensharePreview": {
-            "enabled": false
-        },
-        "NoTypingAnimation": {
-            "enabled": false
-        },
-        "NoUnblockToJump": {
-            "enabled": false
-        },
-        "NormalizeMessageLinks": {
-            "enabled": false
-        },
-        "NSFWGateBypass": {
-            "enabled": false
-        },
-        "OnePingPerDM": {
-            "enabled": false
-        },
-        "oneko": {
-            "enabled": false
-        },
-        "OpenInApp": {
-            "enabled": false
-        },
-        "Party mode 🎉": {
-            "enabled": false
-        },
-        "PermissionFreeWill": {
-            "enabled": false
-        },
-        "PermissionsViewer": {
-            "enabled": false
-        },
-        "petpet": {
-            "enabled": false
-        },
-        "PictureInPicture": {
-            "enabled": false
-        },
-        "PinDMs": {
-            "enabled": false
-        },
-        "PlainFolderIcon": {
-            "enabled": false
-        },
-        "PlatformIndicators": {
-            "enabled": false
-        },
-        "PreviewMessage": {
-            "enabled": false
-        },
-        "PronounDB": {
-            "enabled": false
-        },
-        "QuickMention": {
-            "enabled": false
-        },
-        "QuickReply": {
-            "enabled": false
-        },
-        "ReactErrorDecoder": {
-            "enabled": false
-        },
-        "ReadAllNotificationsButton": {
-            "enabled": false
-        },
-        "RelationshipNotifier": {
-            "enabled": false
-        },
-        "RevealAllSpoilers": {
-            "enabled": false
-        },
-        "ReverseImageSearch": {
-            "enabled": false
-        },
-        "RoleColorEverywhere": {
-            "enabled": false
-        },
-        "SearchReply": {
-            "enabled": false
-        },
-        "SecretRingToneEnabler": {
-            "enabled": false
-        },
-        "SendTimestamps": {
-            "enabled": false
-        },
-        "ServerListIndicators": {
-            "enabled": false
-        },
-        "ServerProfile": {
-            "enabled": false
-        },
-        "ShikiCodeblocks": {
-            "enabled": false
-        },
-        "ShowAllMessageButtons": {
-            "enabled": false
-        },
-        "ShowConnections": {
-            "enabled": false
-        },
-        "ShowHiddenChannels": {
-            "enabled": false
-        },
-        "ShowMeYourName": {
-            "enabled": false
-        },
-        "ShowTimeouts": {
-            "enabled": false
-        },
-        "SilentMessageToggle": {
-            "enabled": false
-        },
-        "SilentTyping": {
-            "enabled": false
-        },
-        "SortFriendRequests": {
-            "enabled": false
-        },
         "SpotifyControls": {
             "enabled": true
-        },
-        "SpotifyCrack": {
-            "enabled": false
-        },
-        "SpotifyShareCommands": {
-            "enabled": false
-        },
-        "StartupTimings": {
-            "enabled": false
-        },
-        "SuperReactionTweaks": {
-            "enabled": false
-        },
-        "TextReplace": {
-            "enabled": false
-        },
-        "ThemeAttributes": {
-            "enabled": false
-        },
-        "TimeBarAllActivities": {
-            "enabled": false
-        },
-        "Translate": {
-            "enabled": false
-        },
-        "TypingIndicator": {
-            "enabled": false
-        },
-        "TypingTweaks": {
-            "enabled": false
-        },
-        "Unindent": {
-            "enabled": false
-        },
-        "UnsuppressEmbeds": {
-            "enabled": false
-        },
-        "UrbanDictionary": {
-            "enabled": false
-        },
-        "UserVoiceShow": {
-            "enabled": false
-        },
-        "USRBG": {
-            "enabled": false
-        },
-        "ValidUser": {
-            "enabled": false
-        },
-        "VoiceChatDoubleClick": {
-            "enabled": false
-        },
-        "VcNarrator": {
-            "enabled": false
-        },
-        "VencordToolbox": {
-            "enabled": false
-        },
-        "ViewIcons": {
-            "enabled": false
-        },
-        "ViewRaw": {
-            "enabled": false
         },
         "VoiceMessages": {
             "enabled": true
@@ -437,12 +64,6 @@
         },
         "WebKeybinds": {
             "enabled": true
-        },
-        "WhoReacted": {
-            "enabled": false
-        },
-        "Wikisearch": {
-            "enabled": false
         }
     },
     "notifications": {
@@ -450,11 +71,5 @@
         "position": "bottom-right",
         "useNative": "not-focused",
         "logLimit": 50
-    },
-    "cloud": {
-        "authenticated": false,
-        "url": "https://api.vencord.dev/",
-        "settingsSync": false,
-        "settingsSyncVersion": 1707956768805
     }
 }
