--- a/modules/home/fastfetch/fastfetch.jsonc
+++ b/modules/home/fastfetch/fastfetch.jsonc
@@ -1,6 +1,50 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "type": "kitty"
-  }
+      "type": "kitty-direct",
+      "source": "{{ logoFile }}",
+      "preserveAspectRatio": true
+  },
+  "display": {
+    "size": {
+        "maxPrefix": "MB",
+        "ndigits": 0
+    }
+  },
+  "modules": [
+      "title",
+      "separator",
+      "os",
+      "host",
+      "kernel",
+      "uptime",
+      "packages",
+      "shell",
+      {
+          "type": "display",
+          "compactType": "original",
+          "key": "Resolution"
+      },
+      "de",
+      "wm",
+      "wmtheme",
+      "theme",
+      "icons",
+      "terminal",
+      {
+          "type": "terminalfont",
+          "format": "{/2}{-}{/}{2}{?3} {3}{?}"
+      },
+      "cpu",
+      {
+          "type": "gpu",
+          "key": "GPU"
+      },
+      {
+          "type": "memory",
+          "format": "{/1}{-}{/}{/2}{-}{/}{} / {}"
+      },
+      "break",
+      "colors"
+  ]
 }
