--- a/modules/nixos/stylix/colorscheme.yaml
+++ b/modules/nixos/stylix/colorscheme.yaml
@@ -1,18 +1,21 @@
-scheme: "Tokyonight"
-author: "Folke Lemaitre (https://github.com/folke)"
-base00: "24283b"
-base01: "1f2335"
-base02: "292e42"
-base03: "565f89"
-base04: "a9b1d6"
-base05: "c0caf5"
-base06: "c0caf5"
-base07: "c0caf5"
-base08: "f7768e"
-base09: "ff9e64"
-base0A: "e0af68"
-base0B: "9ece6a"
-base0C: "1abc9c"
-base0D: "41a6b5"
-base0E: "bb9af7"
-base0F: "ff007c"
+system: "base16"
+name: "Ayu Dark"
+author: "Khue Nguyen <Z5483Y@gmail.com>"
+variant: "dark"
+palette:
+  base00: "#0F1419"
+  base01: "#131721"
+  base02: "#272D38"
+  base03: "#3E4B59"
+  base04: "#BFBDB6"
+  base05: "#E6E1CF"
+  base06: "#E6E1CF"
+  base07: "#F3F4F5"
+  base08: "#F07178"
+  base09: "#FF8F40"
+  base0A: "#FFB454"
+  base0B: "#B8CC52"
+  base0C: "#95E6CB"
+  base0D: "#59C2FF"
+  base0E: "#D2A6FF"
+  base0F: "#E6B673"
